--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -2,7 +2,7 @@
   background-color: #000124;
   color: #cbdfd6;
   height: 100px;
-  padding: 40px 200px;
+  padding: 40px 0;
 }
 
 .footer .content {
@@ -22,11 +22,28 @@
   flex-direction: column;
 }
 
-.links a {
-  padding-left: 5px;
-}
-
 .credit {
   display: flex;
   flex-direction: column;
+}
+
+
+@media(max-width: 700px) {
+    .footer {
+        padding: 0;
+      }
+
+    .footer .content {
+        display: flex;
+        flex-direction: column-reverse;
+        text-align: center;
+        font-size: 1.5rem;
+        font-weight: normal;
+      }
+
+      .links {
+        flex-direction: row;
+        justify-content: space-around;
+        margin: 10px 0;
+      }
 }
