--- a/src/css/Projects.css
+++ b/src/css/Projects.css
@@ -13,7 +13,7 @@
 .project img {
   border: 8px #fff solid;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  margin: 0 50px 0 0;
+  margin: 0 40px 0 0;
   width: 400px;
 }
 
@@ -65,4 +65,52 @@
 .pButtons a:hover {
     background-color: #75acaf;
     transition: 0.25s ease-out;
+}
+
+
+@media(max-width: 768px) {
+    /* #projects {
+        width: 100%;
+    } */
+
+    .project {
+        display: flex;
+        flex-direction: column;
+        margin: 0 auto 70px;
+        width: 100%;
+        text-align: left;
+        border: 1px solid red;
+        padding: 0 40px;
+      }
+
+    .project:nth-child(even) {
+        flex-direction: column;
+        text-align: left;
+        width: 100%;
+    }
+
+    .pButtons {
+        display: flex;
+        justify-content: space-around;
+        width: 100%;
+      }
+
+    .project img {
+        border: 8px #fff solid;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+        margin: 0 0 20px 0;
+        width: 100%;
+      }
+
+      .project:nth-child(even) img {
+        margin: 0 0 20px 0;
+        width: 100%;
+      }
+
+      .pButtons a {
+        color: #cbdfd6;
+        background-color: #000649;
+        padding: 10px 50px;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+      }
 }
