--- a/src/css/_global.css
+++ b/src/css/_global.css
@@ -1,5 +1,5 @@
 html {
   font-size: 62.5%;
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
   scroll-behavior: smooth;
 }
